# payment-backend-service

./: .gitignore  Cargo.toml  README.md  api_docs.md  docker-compose.yml
src/: lib.rs  main.rs
src/auth/: mod.rs
src/controllers/: accounts.rs  auth.rs  mod.rs  profile.rs  transactions.rs
src/db/: mod.rs
src/entities/: account.rs  mod.rs  prelude.rs  transactions.rs  txns.rs  users.rs
src/fairings/: cors.rs
src/kafka/: consumer.rs  producer.rs
src/migrator/: m20250521_135328_create_users_table.rs  m20250521_135711_create_accounts_table.rs  m20250521_135737_store_transactions_table.rs  mod.rs
src/utils/: mod.rs  random.rs  validations.rs
tests/: endpoint_test.rs
