[package]
name = "payment_service"
version = "0.1.0"
edition = "2024"


[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
garde = { version = "0.22.0", features = ["derive", "full"] }
jsonwebtoken = "9.3.1"
rand = "0.9.1"
rdkafka = { version = "0.37.0", features = ["tokio"] }
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"] }
sea-orm-migration = "1.1.11"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

[lib]
name = "payment_service"
path = "src/lib.rs"
